--- a/src/JenkinsNotification.CustomControls/MessageDialog.xaml
+++ b/src/JenkinsNotification.CustomControls/MessageDialog.xaml
@@ -1,20 +1,21 @@
-﻿<Window x:Class="JenkinsNotification.CustomControls.MessageDialog"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        x:Name="self"
-        Title="MessageDialog"
-        MinWidth="300"
-        MinHeight="140"
-        BorderThickness="1"
-        ResizeMode="NoResize"
-        SizeToContent="WidthAndHeight"
-        SnapsToDevicePixels="True"
-        WindowStyle="None"
-        mc:Ignorable="d">
+﻿<Window
+    x:Class="JenkinsNotification.CustomControls.MessageDialog"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    x:Name="self"
+    Title="MessageDialog"
+    MinWidth="300"
+    MinHeight="140"
+    BorderThickness="1"
+    ResizeMode="NoResize"
+    SizeToContent="WidthAndHeight"
+    SnapsToDevicePixels="True"
+    WindowStyle="None"
+    mc:Ignorable="d">
     <Window.Resources>
         <Style BasedOn="{StaticResource {x:Type Button}}" TargetType="{x:Type Button}">
             <Setter Property="Padding" Value="12,4" />
@@ -38,19 +39,19 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <DockPanel x:Name="CaptionAreaDockPanel"
-                   Grid.Row="0"
-                   Height="{StaticResource View.Caption.Height}"
-                   HorizontalAlignment="Stretch"
-                   Background="{StaticResource MessageDialog.Caption.Background}"
-                   MouseLeftButtonDown="CaptionAreaDockPanel_OnMouseLeftButtonDown">
-            <TextBlock Margin="8,4"
-                       VerticalAlignment="Center"
-                       FontSize="{StaticResource View.Caption.FontSize}"
-                       Foreground="{StaticResource MessageDialog.Caption.Foreground}"
-                       Text="{Binding Caption,
-                                      ElementName=self,
-                                      Mode=OneWay}" />
+        <DockPanel
+            x:Name="CaptionAreaDockPanel"
+            Grid.Row="0"
+            Height="{StaticResource View.Caption.Height}"
+            HorizontalAlignment="Stretch"
+            Background="{StaticResource MessageDialog.Caption.Background}"
+            MouseLeftButtonDown="CaptionAreaDockPanel_OnMouseLeftButtonDown">
+            <TextBlock
+                Margin="8,4"
+                VerticalAlignment="Center"
+                FontSize="{StaticResource View.Caption.FontSize}"
+                Foreground="{StaticResource MessageDialog.Caption.Foreground}"
+                Text="{Binding Caption, ElementName=self, Mode=OneWay}" />
         </DockPanel>
         <Grid Grid.Row="1" Margin="18,12">
             <Grid.ColumnDefinitions>
@@ -59,58 +60,52 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Border Grid.Column="0">
-
-                <local:MessageIcon Width="48"
-                                   Height="48"
-                                   HorizontalAlignment="Left"
-                                   VerticalAlignment="Center"
-                                   IconType="{Binding IconType,
-                                                      ElementName=self,
-                                                      Mode=OneWay}" />
-
+                <local:MessageIcon
+                    Width="48"
+                    Height="48"
+                    HorizontalAlignment="Left"
+                    VerticalAlignment="Center"
+                    IconType="{Binding IconType, ElementName=self, Mode=OneWay}" />
             </Border>
             <Border Grid.Column="2">
-                <TextBlock VerticalAlignment="Center"
-                           Text="{Binding Message,
-                                          ElementName=self,
-                                          Mode=OneWay}"
-                           TextTrimming="CharacterEllipsis"
-                           TextWrapping="WrapWithOverflow" />
+                <TextBlock
+                    VerticalAlignment="Center"
+                    Text="{Binding Message, ElementName=self, Mode=OneWay}"
+                    TextTrimming="CharacterEllipsis"
+                    TextWrapping="WrapWithOverflow" />
             </Border>
         </Grid>
         <Grid Grid.Row="2">
-            <Border Height="2"
-                    Margin="12,0"
-                    Background="{StaticResource MessageDialog.Separator.Background}" />
+            <Border
+                Height="2"
+                Margin="12,0"
+                Background="{StaticResource MessageDialog.Separator.Background}" />
         </Grid>
         <Border Grid.Row="3">
-            <StackPanel Margin="12,8"
-                        HorizontalAlignment="Right"
-                        Orientation="Horizontal">
-                <Button x:Name="OkButton"
-                        Click="OkButton_OnClick"
-                        Content="{Binding OK,
-                                          Mode=OneWay,
-                                          Source={StaticResource CustomControls.Resources}}"
-                        Visibility="Collapsed" />
-                <Button x:Name="YesButton"
-                        Click="YesButton_OnClick"
-                        Content="{Binding Yes,
-                                          Mode=OneWay,
-                                          Source={StaticResource CustomControls.Resources}}"
-                        Visibility="Collapsed" />
-                <Button x:Name="NoButton"
-                        Click="NoButton_OnClick"
-                        Content="{Binding No,
-                                          Mode=OneWay,
-                                          Source={StaticResource CustomControls.Resources}}"
-                        Visibility="Collapsed" />
-                <Button x:Name="CancelButton"
-                        Click="CancelButton_OnClick"
-                        Content="{Binding Cancel,
-                                          Mode=OneWay,
-                                          Source={StaticResource CustomControls.Resources}}"
-                        Visibility="Collapsed" />
+            <StackPanel
+                Margin="12,8"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+                <Button
+                    x:Name="OkButton"
+                    Click="OkButton_OnClick"
+                    Content="{Binding OK, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
+                    Visibility="Collapsed" />
+                <Button
+                    x:Name="YesButton"
+                    Click="YesButton_OnClick"
+                    Content="{Binding Yes, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
+                    Visibility="Collapsed" />
+                <Button
+                    x:Name="NoButton"
+                    Click="NoButton_OnClick"
+                    Content="{Binding No, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
+                    Visibility="Collapsed" />
+                <Button
+                    x:Name="CancelButton"
+                    Click="CancelButton_OnClick"
+                    Content="{Binding Cancel, Mode=OneWay, Source={StaticResource CustomControls.Resources}}"
+                    Visibility="Collapsed" />
             </StackPanel>
         </Border>
     </Grid>
