--- a/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
+++ b/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
@@ -1,12 +1,13 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
-                    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-                    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-                    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
-                    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
+    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
+    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
+    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:system="clr-namespace:System;assembly=mscorlib">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Color.xaml" />
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/EnumDataProvider.xaml" />
@@ -67,7 +68,7 @@
     <system:Double x:Key="View.Caption.FontSize">16</system:Double>
 
     <!--  キャプションボタンのフォントサイズ  -->
-    <system:Double x:Key="View.CaptionButton.FontSize">12</system:Double>
+    <system:Double x:Key="View.CaptionButton.FontSize">18</system:Double>
 
     <!--  #End Region コントロールなどに設定する数値や文字列を定義  -->
 
@@ -86,6 +87,8 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="Padding" Value="12,2" />
         <Setter Property="MinWidth" Value="60" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="UseLayoutRounding" Value="True" />
     </Style>
 
     <!--  CheckBox のStyle  -->
@@ -120,43 +123,48 @@
         <Setter Property="Background" Value="{StaticResource MaterialDesignBackground}" />
         <Setter Property="Foreground" Value="{StaticResource MessageDialog.Main.Foreground}" />
         <Setter Property="BorderBrush" Value="{StaticResource MessageDialog.Caption.Background}" />
-        <Setter Property="BorderThickness" Value="1" />
+        <Setter Property="BorderThickness" Value="3" />
         <Setter Property="FontFamily" Value="{StaticResource View.Main.FontFamily}" />
         <Setter Property="FontSize" Value="{StaticResource View.Main.FontSize}" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
-                              CornerRadius="3"
-                              GlassFrameThickness="0"
-                              ResizeBorderThickness="5"
-                              UseAeroCaptionButtons="False" />
+                <WindowChrome
+                    CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
+                    CornerRadius="6"
+                    GlassFrameThickness="0"
+                    ResizeBorderThickness="5"
+                    UseAeroCaptionButtons="False" />
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            SnapsToDevicePixels="True"
-                            UseLayoutRounding="True">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True"
+                        UseLayoutRounding="True">
                         <Grid SnapsToDevicePixels="True" UseLayoutRounding="True">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <DockPanel Grid.Row="0"
-                                       Height="{StaticResource View.Caption.Height}"
-                                       Background="{StaticResource MessageDialog.Caption.Background}">
+                            <DockPanel
+                                Grid.Row="0"
+                                Height="{StaticResource View.Caption.Height}"
+                                Background="{StaticResource MessageDialog.Caption.Background}">
                                 <Image Margin="8,2" Source="{TemplateBinding Icon}" />
-                                <TextBlock VerticalAlignment="Center"
-                                           DockPanel.Dock="Left"
-                                           FontSize="{StaticResource View.Caption.FontSize}"
-                                           Foreground="{StaticResource MessageDialog.Caption.Foreground}"
-                                           Text="{TemplateBinding Title}" />
-                                <StackPanel HorizontalAlignment="Right"
-                                            DockPanel.Dock="Right"
-                                            Orientation="Horizontal">
+                                <TextBlock
+                                    VerticalAlignment="Center"
+                                    DockPanel.Dock="Left"
+                                    FontSize="{StaticResource View.Caption.FontSize}"
+                                    Foreground="{StaticResource MessageDialog.Caption.Foreground}"
+                                    Text="{TemplateBinding Title}" />
+                                <StackPanel
+                                    HorizontalAlignment="Right"
+                                    DockPanel.Dock="Right"
+                                    Orientation="Horizontal">
                                     <StackPanel.Resources>
                                         <Style BasedOn="{StaticResource MaterialDesignToolButton}" TargetType="{x:Type Button}">
                                             <Setter Property="FontFamily" Value="Marlett" />
@@ -166,39 +174,38 @@
                                             <Setter Property="IsTabStop" Value="False" />
                                             <Setter Property="Padding" Value="8,3" />
                                             <Setter Property="FontSize" Value="{StaticResource View.CaptionButton.FontSize}" />
-                                            <Setter Property="FontWeight" Value="Bold" />
+                                            <Setter Property="FontWeight" Value="Thin" />
                                             <Setter Property="WindowChrome.IsHitTestVisibleInChrome" Value="True" />
                                             <Setter Property="Foreground" Value="{StaticResource MessageDialog.Caption.Foreground}" />
+                                            <Setter Property="SnapsToDevicePixels" Value="True" />
+                                            <Setter Property="UseLayoutRounding" Value="True" />
                                         </Style>
                                     </StackPanel.Resources>
-                                    <Button x:Name="Part_MinimumButtonKey"
-                                            Content="0"
-                                            ToolTip="{Binding Minimum,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_MaximumButtonKey"
-                                            Content="1"
-                                            ToolTip="{Binding Maximum,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_RestoreButtonKey"
-                                            Content="2"
-                                            ToolTip="{Binding Restore,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_CloseButtonKey"
-                                            Content="r"
-                                            ToolTip="{Binding Close,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_MinimumButtonKey"
+                                        Content="0"
+                                        ToolTip="{Binding Minimum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_MaximumButtonKey"
+                                        Content="1"
+                                        ToolTip="{Binding Maximum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_RestoreButtonKey"
+                                        Content="2"
+                                        ToolTip="{Binding Restore, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_CloseButtonKey"
+                                        Content="r"
+                                        ToolTip="{Binding Close, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
                                 </StackPanel>
                             </DockPanel>
-                            <ContentPresenter Grid.Row="1"
-                                              Margin="{TemplateBinding Padding}"
-                                              HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                              VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                              SnapsToDevicePixels="True"
-                                              UseLayoutRounding="True" />
+                            <ContentPresenter
+                                Grid.Row="1"
+                                Margin="{TemplateBinding Padding}"
+                                HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                SnapsToDevicePixels="True"
+                                UseLayoutRounding="True" />
                         </Grid>
                     </Border>
                 </ControlTemplate>
@@ -210,10 +217,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ItemContent}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            SnapsToDevicePixels="True">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -221,23 +229,26 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <Border Grid.Row="0">
-                                <TextBlock Margin="2,2,2,4"
-                                           FontSize="{TemplateBinding HeaderFontSize}"
-                                           Foreground="{TemplateBinding HeaderForeground}"
-                                           Text="{TemplateBinding Header}" />
+                                <TextBlock
+                                    Margin="2,2,2,4"
+                                    FontSize="{TemplateBinding HeaderFontSize}"
+                                    Foreground="{TemplateBinding HeaderForeground}"
+                                    Text="{TemplateBinding Header}" />
                             </Border>
                             <Border Grid.Row="1">
-                                <TextBlock Margin="8,2,2,6"
-                                           FontSize="{TemplateBinding DescriptionFontSize}"
-                                           Foreground="{TemplateBinding DescriptionForeground}"
-                                           Text="{TemplateBinding Description}"
-                                           TextWrapping="WrapWithOverflow" />
+                                <TextBlock
+                                    Margin="8,2,2,6"
+                                    FontSize="{TemplateBinding DescriptionFontSize}"
+                                    Foreground="{TemplateBinding DescriptionForeground}"
+                                    Text="{TemplateBinding Description}"
+                                    TextWrapping="WrapWithOverflow" />
                             </Border>
                             <Border Grid.Row="2">
-                                <ContentPresenter Margin="{TemplateBinding Padding}"
-                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                  SnapsToDevicePixels="True" />
+                                <ContentPresenter
+                                    Margin="{TemplateBinding Padding}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    SnapsToDevicePixels="True" />
                             </Border>
                         </Grid>
                     </Border>
