--- a/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
+++ b/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
@@ -140,6 +140,7 @@
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
                     <Border
+                        x:Name="Part_LayoutRoot"
                         Background="{TemplateBinding Background}"
                         BorderBrush="{TemplateBinding BorderBrush}"
                         BorderThickness="{TemplateBinding BorderThickness}"
