--- a/Tools/Server.Simulator/App.xaml
+++ b/Tools/Server.Simulator/App.xaml
@@ -1,9 +1,7 @@
 ﻿<Application
     x:Class="Server.Simulator.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="clr-namespace:Server.Simulator"
-             StartupUri="Views/ManageView.xaml">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
