--- a/src/JenkinsNotification.CustomControls/BalloonTips/JobExecuteResultBalloonTip.xaml
+++ b/src/JenkinsNotification.CustomControls/BalloonTips/JobExecuteResultBalloonTip.xaml
@@ -1,12 +1,21 @@
 ﻿<UserControl x:Class="JenkinsNotification.CustomControls.BalloonTips.JobExecuteResultBalloonTip"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:JenkinsNotification.CustomControls.BalloonTips"
-             mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-            
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:JenkinsNotification.CustomControls.ViewModels"
+             d:DataContext="{d:DesignInstance {x:Type viewModels:JobExecuteResultBalloonTipViewModel}}"
+             d:DesignHeight="100"
+             d:DesignWidth="240"
+             Background="{Binding Result.Result,
+                                  Converter={StaticResource JobResultTypeToBackgroundConverter},
+                                  Mode=OneWay}"
+             mc:Ignorable="d">
+    <Grid x:Name="LayoutRoot">
+        <ContentControl x:Name="MainContent"
+                        Content="{Binding Result,
+                                          Mode=OneWay}"
+                        ContentTemplate="{DynamicResource JobExecuteResultSuccessTemplate}" />
     </Grid>
 </UserControl>
