--- a/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
+++ b/src/JenkinsNotification.CustomControls/Themes/Generic.xaml
@@ -1,17 +1,17 @@
-﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
-                    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
-                    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
-                    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
-                    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
-                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
-                    xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf">
+﻿<ResourceDictionary
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:core.Properties="clr-namespace:JenkinsNotification.Core.Properties;assembly=JenkinsNotification.Core"
+    xmlns:dragablz="http://dragablz.net/winfx/xaml/dragablz"
+    xmlns:local="clr-namespace:JenkinsNotification.CustomControls"
+    xmlns:local.Converters="clr-namespace:JenkinsNotification.CustomControls.Converters"
+    xmlns:local.Properties="clr-namespace:JenkinsNotification.CustomControls.Properties"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:system="clr-namespace:System;assembly=mscorlib"
+    xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Color.xaml" />
         <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/EnumDataProvider.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/JenkinsNotification.CustomControls;component/Themes/Template.JobExecuteResult.xaml" />
 
         <!--
             MaterialDesignTheme の使い方については、以下を参照してください。
@@ -49,6 +49,9 @@
 
     <local.Converters:InvertBooleanConverter x:Key="InvertBooleanConverter" />
     <local.Converters:BooleanToEnumConverter x:Key="BooleanToEnumConverter" />
+    <local.Converters:JobResultTypeToMessageBoxImageConverter x:Key="JobResultTypeToMessageBoxImageConverter" />
+    <local.Converters:JobResultTypeToBackgroundConverter x:Key="JobResultTypeToBackgroundConverter" />
+    <local.Converters:JobResultTypeToForegroundConverter x:Key="JobResultTypeToForegroundConverter" />
 
     <!--  #End Region アプリケーション全体で使用するConverter定義  -->
 
@@ -143,39 +146,44 @@
         <Setter Property="FontSize" Value="{StaticResource View.Main.FontSize}" />
         <Setter Property="WindowChrome.WindowChrome">
             <Setter.Value>
-                <WindowChrome CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
-                              CornerRadius="6"
-                              GlassFrameThickness="0"
-                              ResizeBorderThickness="5"
-                              UseAeroCaptionButtons="False" />
+                <WindowChrome
+                    CaptionHeight="{DynamicResource {x:Static SystemParameters.WindowCaptionHeightKey}}"
+                    CornerRadius="6"
+                    GlassFrameThickness="0"
+                    ResizeBorderThickness="5"
+                    UseAeroCaptionButtons="False" />
             </Setter.Value>
         </Setter>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Window}">
-                    <Border x:Name="Part_LayoutRoot"
-                            Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            SnapsToDevicePixels="True"
-                            UseLayoutRounding="True">
+                    <Border
+                        x:Name="Part_LayoutRoot"
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True"
+                        UseLayoutRounding="True">
                         <Grid SnapsToDevicePixels="True" UseLayoutRounding="True">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
-                            <DockPanel Grid.Row="0"
-                                       Height="{StaticResource View.Caption.Height}"
-                                       Background="{StaticResource MessageDialog.Caption.Background}">
+                            <DockPanel
+                                Grid.Row="0"
+                                Height="{StaticResource View.Caption.Height}"
+                                Background="{StaticResource MessageDialog.Caption.Background}">
                                 <Image Margin="8,2" Source="{TemplateBinding Icon}" />
-                                <TextBlock VerticalAlignment="Center"
-                                           DockPanel.Dock="Left"
-                                           FontSize="{StaticResource View.Caption.FontSize}"
-                                           Foreground="{StaticResource MessageDialog.Caption.Foreground}"
-                                           Text="{TemplateBinding Title}" />
-                                <StackPanel HorizontalAlignment="Right"
-                                            DockPanel.Dock="Right"
-                                            Orientation="Horizontal">
+                                <TextBlock
+                                    VerticalAlignment="Center"
+                                    DockPanel.Dock="Left"
+                                    FontSize="{StaticResource View.Caption.FontSize}"
+                                    Foreground="{StaticResource MessageDialog.Caption.Foreground}"
+                                    Text="{TemplateBinding Title}" />
+                                <StackPanel
+                                    HorizontalAlignment="Right"
+                                    DockPanel.Dock="Right"
+                                    Orientation="Horizontal">
                                     <StackPanel.Resources>
                                         <Style BasedOn="{StaticResource MaterialDesignToolButton}" TargetType="{x:Type Button}">
                                             <Setter Property="FontFamily" Value="Marlett" />
@@ -192,34 +200,31 @@
                                             <Setter Property="UseLayoutRounding" Value="True" />
                                         </Style>
                                     </StackPanel.Resources>
-                                    <Button x:Name="Part_MinimumButtonKey"
-                                            Content="0"
-                                            ToolTip="{Binding Minimum,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_MaximumButtonKey"
-                                            Content="1"
-                                            ToolTip="{Binding Maximum,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_RestoreButtonKey"
-                                            Content="2"
-                                            ToolTip="{Binding Restore,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
-                                    <Button x:Name="Part_CloseButtonKey"
-                                            Content="r"
-                                            ToolTip="{Binding Close,
-                                                              Mode=OneWay,
-                                                              Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_MinimumButtonKey"
+                                        Content="0"
+                                        ToolTip="{Binding Minimum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_MaximumButtonKey"
+                                        Content="1"
+                                        ToolTip="{Binding Maximum, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_RestoreButtonKey"
+                                        Content="2"
+                                        ToolTip="{Binding Restore, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
+                                    <Button
+                                        x:Name="Part_CloseButtonKey"
+                                        Content="r"
+                                        ToolTip="{Binding Close, Mode=OneWay, Source={StaticResource CustomControls.Resources}}" />
                                 </StackPanel>
                             </DockPanel>
                             <AdornerDecorator Grid.Row="1">
-                                <ContentPresenter Margin="{TemplateBinding Padding}"
-                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                  SnapsToDevicePixels="True"
-                                                  UseLayoutRounding="True" />
+                                <ContentPresenter
+                                    Margin="{TemplateBinding Padding}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    SnapsToDevicePixels="True"
+                                    UseLayoutRounding="True" />
                             </AdornerDecorator>
                         </Grid>
                     </Border>
@@ -232,10 +237,11 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:ItemContent}">
-                    <Border Background="{TemplateBinding Background}"
-                            BorderBrush="{TemplateBinding BorderBrush}"
-                            BorderThickness="{TemplateBinding BorderThickness}"
-                            SnapsToDevicePixels="True">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}"
+                        SnapsToDevicePixels="True">
                         <Grid>
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
@@ -243,23 +249,26 @@
                                 <RowDefinition Height="*" />
                             </Grid.RowDefinitions>
                             <Border Grid.Row="0">
-                                <TextBlock Margin="2,2,2,4"
-                                           FontSize="{TemplateBinding HeaderFontSize}"
-                                           Foreground="{TemplateBinding HeaderForeground}"
-                                           Text="{TemplateBinding Header}" />
+                                <TextBlock
+                                    Margin="2,2,2,4"
+                                    FontSize="{TemplateBinding HeaderFontSize}"
+                                    Foreground="{TemplateBinding HeaderForeground}"
+                                    Text="{TemplateBinding Header}" />
                             </Border>
                             <Border Grid.Row="1">
-                                <TextBlock Margin="8,2,2,6"
-                                           FontSize="{TemplateBinding DescriptionFontSize}"
-                                           Foreground="{TemplateBinding DescriptionForeground}"
-                                           Text="{TemplateBinding Description}"
-                                           TextWrapping="WrapWithOverflow" />
+                                <TextBlock
+                                    Margin="8,2,2,6"
+                                    FontSize="{TemplateBinding DescriptionFontSize}"
+                                    Foreground="{TemplateBinding DescriptionForeground}"
+                                    Text="{TemplateBinding Description}"
+                                    TextWrapping="WrapWithOverflow" />
                             </Border>
                             <Border Grid.Row="2">
-                                <ContentPresenter Margin="{TemplateBinding Padding}"
-                                                  HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                                  VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                                  SnapsToDevicePixels="True" />
+                                <ContentPresenter
+                                    Margin="{TemplateBinding Padding}"
+                                    HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                    VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                    SnapsToDevicePixels="True" />
                             </Border>
                         </Grid>
                     </Border>
