--- a/src/JenkinsNotification.CustomControls/BalloonTips/JobExecuteResultBalloonTip.xaml
+++ b/src/JenkinsNotification.CustomControls/BalloonTips/JobExecuteResultBalloonTip.xaml
@@ -1,65 +1,82 @@
-﻿<UserControl
-    x:Class="JenkinsNotification.CustomControls.BalloonTips.JobExecuteResultBalloonTip"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:customControls="clr-namespace:JenkinsNotification.CustomControls"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:viewModels="clr-namespace:JenkinsNotification.CustomControls.ViewModels"
-    d:DataContext="{d:DesignInstance {x:Type viewModels:JobExecuteResultBalloonTipViewModel}}"
-    d:DesignHeight="100"
-    d:DesignWidth="240"
-    Background="{Binding Result.Result, Converter={StaticResource JobResultTypeToBackgroundConverter}, Mode=OneWay}"
-    BorderBrush="{Binding Result.Result, Converter={StaticResource JobResultTypeToForegroundConverter}}"
-    BorderThickness="2"
-    mc:Ignorable="d">
-    <Grid x:Name="LayoutRoot">
-        <Button
-            Height="Auto"
-            MinWidth="0"
-            Margin="1"
-            Padding="4"
-            HorizontalAlignment="Right"
-            VerticalAlignment="Top"
-            Command="{Binding CloseCommand, Mode=OneWay}"
-            Content="r"
-            FontFamily="Marlett" />
-        <Grid Margin="12">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto" />
-                <ColumnDefinition Width="12" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-            <customControls:MessageIcon
-                Grid.Column="0"
-                Width="48"
-                Height="48"
-                Margin="0,8,0,0"
-                VerticalAlignment="Top"
-                Foreground="{Binding Result.Result, Converter={StaticResource JobResultTypeToForegroundConverter}, Mode=OneTime}"
-                IconType="{Binding Result.Result, Mode=OneTime, Converter={StaticResource JobResultTypeToMessageBoxImageConverter}}" />
-            <Grid Grid.Column="2">
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto" />
-                    <RowDefinition Height="*" />
-                    <RowDefinition Height="Auto" />
-                </Grid.RowDefinitions>
-                <Border Grid.Row="0">
-                    <TextBlock
-                        FontSize="16"
-                        Foreground="{Binding Result.Result, Converter={StaticResource JobResultTypeToForegroundConverter}, Mode=OneWay}"
-                        Text="{Binding Result.Result, Mode=OneTime}" />
-                </Border>
-                <Border Grid.Row="1" Margin="0,4,0,2">
-                    <TextBlock
-                        FontSize="24"
-                        Text="{Binding Result.Name, Mode=OneTime}"
-                        TextWrapping="WrapWithOverflow" />
-                </Border>
-                <Border Grid.Row="2">
-                    <TextBlock HorizontalAlignment="Right" Text="{Binding Result.BuildNumber, Mode=OneTime, StringFormat=Build:{0}}" />
-                </Border>
+﻿<UserControl x:Class="JenkinsNotification.CustomControls.BalloonTips.JobExecuteResultBalloonTip"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:customControls="clr-namespace:JenkinsNotification.CustomControls"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:viewModels="clr-namespace:JenkinsNotification.CustomControls.ViewModels"
+             MaxWidth="360"
+             MaxHeight="140"
+             d:DataContext="{d:DesignInstance {x:Type viewModels:JobExecuteResultBalloonTipViewModel}}"
+             d:DesignHeight="140"
+             d:DesignWidth="360"
+             Foreground="{Binding Result.Result,
+                                  Converter={StaticResource JobResultTypeToForegroundConverter},
+                                  Mode=OneWay}"
+             mc:Ignorable="d">
+    <Border x:Name="LayoutRoot"
+            Background="{Binding Result.Result,
+                                 Converter={StaticResource JobResultTypeToBackgroundConverter},
+                                 Mode=OneWay}"
+            BorderBrush="{Binding Result.Result,
+                                  Converter={StaticResource JobResultTypeToBorderBrushConverter}}"
+            BorderThickness="3"
+            CornerRadius="8">
+        <Grid>
+            <Button Height="Auto"
+                    MinWidth="0"
+                    Margin="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Top"
+                    Command="{Binding CloseCommand,
+                                      Mode=OneWay}"
+                    Content="r"
+                    FontFamily="Marlett"
+                    Padding="4" />
+            <Grid Margin="12">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="12" />
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
+                <customControls:MessageIcon Grid.Column="0"
+                                            Width="40"
+                                            Height="40"
+                                            Margin="0,8,0,0"
+                                            VerticalAlignment="Top"
+                                            Foreground="{Binding Result.Result,
+                                                                 Converter={StaticResource JobResultTypeToBorderBrushConverter},
+                                                                 Mode=OneTime}"
+                                            IconType="{Binding Result.Result,
+                                                               Mode=OneTime,
+                                                               Converter={StaticResource JobResultTypeToMessageBoxImageConverter}}" />
+                <Grid Grid.Column="2">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="*" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Border Grid.Row="0">
+                        <TextBlock FontSize="16" Text="{Binding Result.Result, Mode=OneTime}" />
+                    </Border>
+                    <Border Grid.Row="1" Margin="0,4,0,2">
+                        <TextBlock FontSize="20"
+                                   Text="{Binding Result.Name,
+                                                  Mode=OneTime}"
+                                   TextTrimming="CharacterEllipsis"
+                                   ToolTip="{Binding Text,
+                                                     Mode=OneWay,
+                                                     RelativeSource={RelativeSource Self}}" />
+                    </Border>
+                    <Border Grid.Row="2">
+                        <TextBlock HorizontalAlignment="Right"
+                                   FontSize="14"
+                                   Text="{Binding Result.BuildNumber,
+                                                  Mode=OneTime,
+                                                  StringFormat=Build:{0}}" />
+                    </Border>
+                </Grid>
             </Grid>
         </Grid>
-    </Grid>
+    </Border>
 </UserControl>
